@@ -255,8 +255,8 @@ public class ExportImportControllerIntegrationTest extends IntegrationTestsBase 
         .build();
 
     input.setPeriods(Collections.singletonList(period));
-    input.setFilters(List.of());
-    input.setHistoryEntries(List.of());
+    input.setFilters(Collections.emptyList());
+    input.setHistoryEntries(Collections.emptyList());
 
     // when
     mockMvc.perform(post(IMPORT_SERVICE_PATH)
@@ -338,7 +338,7 @@ public class ExportImportControllerIntegrationTest extends IntegrationTestsBase 
         .build();
 
     input.setInitialAccountsState(Collections.singletonList(japaneaseAccount));
-    input.setFilters(List.of());
+    input.setFilters(Collections.emptyList());
 
     // when
     mockMvc.perform(post(IMPORT_SERVICE_PATH)
@@ -374,7 +374,7 @@ public class ExportImportControllerIntegrationTest extends IntegrationTestsBase 
         .build();
 
     input.setInitialAccountsState(Collections.singletonList(japaneaseAccount));
-    input.setFilters(List.of());
+    input.setFilters(Collections.emptyList());
 
     // when
     mockMvc.perform(post(IMPORT_SERVICE_PATH)
@@ -428,8 +428,8 @@ public class ExportImportControllerIntegrationTest extends IntegrationTestsBase 
     emptyFilter.setName("All empty");
 
     input.setFilters(Arrays.asList(filter, emptyFilter));
-    input.setPeriods(List.of());
-    input.setHistoryEntries(List.of());
+    input.setPeriods(Collections.emptyList());
+    input.setHistoryEntries(Collections.emptyList());
 
     // when
     mockMvc.perform(post(IMPORT_SERVICE_PATH)
