@@ -1,6 +1,5 @@
 package com.pfm.export;
 
-import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.Mockito.when;
 
 import com.pfm.export.ExportResult.ExportAccount;
@@ -13,6 +12,7 @@ import com.pfm.export.converter.FilterExporter;
 import com.pfm.export.converter.FundsExporter;
 import com.pfm.export.converter.PeriodExporter;
 import com.pfm.history.HistoryEntryService;
+import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -25,18 +25,25 @@ import org.mockito.junit.jupiter.MockitoExtension;
 class ExportServiceTest {
 
   private static final long USER_ID = 1L;
+
   @Mock
   private PeriodExporter periodExporter;
+
   @Mock
   private CategoryExporter categoryExporter;
+
   @Mock
   private FilterExporter filterExporter;
+
   @Mock
   private AccountExporter accountExporter;
+
   @Mock
   private FundsExporter fundsExporter;
+
   @Mock
   private HistoryEntryService historyEntryService;
+
   @InjectMocks
   private ExportService exportService;
 
@@ -45,12 +52,12 @@ class ExportServiceTest {
     // given
     List<ExportAccount> exportAccounts = List.of(new ExportAccount());
 
-    when(periodExporter.export(USER_ID)).thenReturn(List.of());
+    when(periodExporter.export(USER_ID)).thenReturn(Collections.emptyList());
     when(categoryExporter.export(USER_ID)).thenReturn(List.of(new ExportCategory()));
     when(filterExporter.export(USER_ID)).thenReturn(List.of(new ExportFilter()));
     when(accountExporter.export(USER_ID)).thenReturn(exportAccounts);
     when(fundsExporter.export(exportAccounts, USER_ID)).thenReturn(new ExportFundsSummary());
-    when(historyEntryService.prepareExportHistory(anyList())).thenReturn(List.of());
+    when(historyEntryService.prepareExportHistory(USER_ID)).thenReturn(Collections.emptyList());
 
     // when
     ExportResult exportResult = exportService.exportData(USER_ID);
